@@ -151,6 +151,16 @@ START_RELOC_NUMBERS (elf_sparc_reloc_type)
   RELOC_NUMBER (R_SPARC_TLS_DTPOFF64, 77)
   RELOC_NUMBER (R_SPARC_TLS_TPOFF32, 78)
   RELOC_NUMBER (R_SPARC_TLS_TPOFF64, 79)
+
+  RELOC_NUMBER (R_SPARC_GOTDATA_HIX22, 80)
+  RELOC_NUMBER (R_SPARC_GOTDATA_LOX10, 81)
+  RELOC_NUMBER (R_SPARC_GOTDATA_OP_HIX22, 82)
+  RELOC_NUMBER (R_SPARC_GOTDATA_OP_LOX10, 83)
+  RELOC_NUMBER (R_SPARC_GOTDATA_OP, 84)
+
+  RELOC_NUMBER (R_SPARC_H34, 85)
+  RELOC_NUMBER (R_SPARC_SIZE32, 86)
+  RELOC_NUMBER (R_SPARC_SIZE64, 87)
   
   EMPTY_RELOC  (R_SPARC_max_std)
 
